--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@400;700&display=swap');
-
-@import "./styles/reset";
-@import "./styles/typography";
+@forward "./styles/reset";
+@forward "./styles/typography";
+@forward "./styles/queries";
